[package]
name = "conduit-cli"
version = "0.1.2"
edition = "2024"
authors = ["SirCesarium"]
description = "A lightning-fast Minecraft mod manager"
repository = "https://github.com/SirCesarium/conduit-cli"
homepage = "https://github.com/SirCesarium/conduit-cli"
license = "MIT"

[dependencies]
async-recursion = "1.1.1"
clap = { version = "4.5.60", features = ["derive"], optional = true }
comfy-table = { version = "7.2.2", optional = true }
console = { version = "0.16.2", optional = true }
dirs = "6.0.0"
futures-util = "0.3.32"
indicatif = { version = "0.18.4", optional = true }
inquire = { version = "0.9.4", optional = true }
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.3"
zip = "8.2.0"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:console", "dep:inquire", "dep:indicatif", "dep:comfy-table"]

[[bin]]
name = "conduit"
path = "src/main.rs"
required-features = ["cli"]


[package.metadata.wix]
upgrade-guid = "74f470da-07f1-44f1-9262-1681c2f47aa1"
path = true

[package.metadata.deb]
maintainer = "SirCesarium"
assets = [
    ["target/release/conduit", "/usr/bin/conduit", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/conduit", dest = "/usr/bin/conduit", mode = "755" },
]